# books-store

./: db.sqlite3  pyproject.toml
basic_django/: settings.py  urls.py
bookstore/: authentication.py  form.py  models.py  urls.py  views.py
bookstore/api/: serializers.py
bookstore/migrations/: 0001_initial.py  0002_remove_bookstore_due_date_bookstore_author.py  0003_bookstore_stock.py  0004_remove_bookstore_status.py  0005_bookstore_price.py  0006_bookstore_category.py  0007_bookstore_sold.py  0008_remove_bookstore_sold_bookstore_total_books.py
cart/: models.py  urls.py  views.py
cart/api/: serializers.py
cart/migrations/: 0001_initial.py  0002_cartitem_created_at.py  0003_remove_cartitem_created_at_cartitem_created_date.py  0004_remove_cartitem_created_date.py
cartitems/: models.py  urls.py  views.py
cartitems/api/: serializer.py
cartitems/migrations/: 0001_initial.py  0002_remove_cartitem_color_remove_cartitem_coupon_code_and_more.py  0003_remove_cartitem_shipping_method.py  0004_cartitem_shipping_method.py  0005_remove_cartitem_shipping_method_and_more.py  0006_remove_cartitem_price_per_item.py  0007_remove_cartitem_book.py  0008_cartitem_book.py  0009_cartitem_bookstore_ids.py  0010_alter_cartitem_total_price.py  0011_alter_cartitem_shipping_number.py  0012_remove_cartitem_book_remove_cartitem_bookstore_ids_and_more.py  0013_cartitembook_booktitle.py  0014_cartitem_seller_id.py  0015_alter_cartitem_seller_id.py  0016_alter_cartitem_seller_id.py  (+1 more)
notification/: models.py  urls.py  views.py
notification/api/: serializers.py
users/: urls.py  views.py
(+12 files in other folders)
